--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,9 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@swc/core": "^1.3.35",
+    "@swc/helpers": "^0.4.14",
+    "@swc/wasm": "^1.3.35",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
